# fast-ip-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
src/: config.py  run.py
src/app/: main.py
src/app/data/: database.py  dependencies.py  models.py  repositories.py
src/app/domain/: dependencies.py  entities.py  enums.py  exceptions.py  interfaces.py  services.py
src/app/infrastructure/: client.py  dependencies.py  provider.py
src/app/presentation/: handlers.py  routers.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 5bf9b732d366_initial.py
